# actionlint-py

./: .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  README-DEV.md  README.md  pyproject.toml  setup.cfg  setup.py  setup_auto_update.py  tox.ini
.github/workflows/: automatic-release.yml  build-dev.yml  build-public-release.yml  build-rel.yml  build-test-release.yml  build.yml  check-for-update.yml  main.yml  release.yml  reset-dev-version.yml  tag-and-release.yml  tag.yml  test-tox.yml  test.yml  upload-to-pypi.yml  upload.yml  version-build-system.yml  version-dev.yml
_custom_build/: __init__.py  __main__.py  _file_ops.py  auto_update_main.py  backend_main.py  bdist_wheel.py  build.py  checksums.cfg  fetch_binaries.py  install.py  install_actionlint.py  setup.cfg  setup.py  version.py
_custom_build/commands/: __init__.py  bdist_wheel.py  build.py  fetch_binaries.py  install.py  install_actionlint.py
_custom_build/utils/: file_ops.py
