[metadata]
name = actionlint_py
description = Python wrapper around invoking actionlint (https://github.com/rhysd/actionlint)
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Mateusz-Grzelinski/actionlint-py
author = Ryan Rhee, Mateusz Grzeliński
author_email = todo
license = MIT
license_file = LICENSE
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy

[options]
python_requires = >=3.7
