[metadata]
name = actionlint_py
description = Python wrapper around invoking actionlint (https://github.com/rhysd/actionlint)
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Mateusz-Grzelinski/actionlint-py
author = Ryan Rhee, Mateusz Grzeliński
author_email = grzelinskimat@gmail.com
license = MIT
license_file = LICENSE
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy

[options]
python_requires = >=3.7

[files-to-download]
tag = 1.6.22
_linux_amd64.tar.gz = 7d7a3061b59718728788e75e6a177c621a31a683ffd21fedeabc1296fc2ee289
_darwin_amd64.tar.gz = 6a1a522521e2fa0351328c439a63fc1c51611d45fc8156af15ad8690165f27c3
_windows_amd64.zip = c0007e418e6cd2008769e55666229b50677f85975676c4246baee5ec3ae9a2b5
