[metadata]
name = actionlint_py
description = Python wrapper around invoking actionlint (https://github.com/rhysd/actionlint)
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Mateusz-Grzelinski/actionlint-py
author = Ryan Rhee, Mateusz Grzeliński
author_email = grzelinskimat@gmail.com
license = MIT
license_file = LICENSE
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy

[options]
python_requires = >=3.7

[files-to-download]
tag = 1.6.24
_linux_amd64.tar.gz = 3c5818744143a5d6754edd3dcc4c2b32c9dfcdd3bb30e0e108fb5e5c505262d4
_darwin_amd64.tar.gz = ce9dd9653700e3ed00464dffddd3e2a61358cf96425f2f3dff840dfc1e105eab
_windows_amd64.zip = b3f43e3fd5a30785f9b9d4a495a7164870698b6a8f072bbd0503e70ef2735f8b
_linux_386.tar.gz = 10f034ab623f8baea0ede2ac079256aa88a4b41801a03fb80df78c48b24cf26c
_windows_arm64.zip = 170187fcb01b7d21b5d25d42dc1beb5da32e5fe3dd04e9433cb641ca1a2191e4
_freebsd_386.tar.gz = 544bdc150bc335d2da866359845df8a318386a04b0575f2516e9a8698cc5d48f
_darwin_arm64.tar.gz = 5477f8a5a4073ef086525a2512b2bf1201641cd544034ad0c66f329590638242
_freebsd_amd64.tar.gz = 8bbc2500434c2cbdbaf10d76a6de29ea279df4bcd5431e29814803199cc589e1
_linux_arm64.tar.gz = 93cc9d1f4a01f0658423b41ecf3bd8c17c619003ec683be8bac9264d0361d0d8
_linux_armv6.tar.gz = af7380b39dc26f5ce50b7bbb0ab9160e2ffec3317f86577f2af8149fea4e03ff
_windows_386.zip = c874d0074f277cde608033e84668e78483f31b46d384cce8f49cda49a56e3217
